<resources>
    <string name="app_name">Lucid Diary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dream_timeline">Dream Timeline</string>
    <string name="dream_archive">Dream Archive</string>
    <string name="tools">Tools</string>
    <string name="dream_symbols">Dream Symbols</string>
    <string name="misc">Misc</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_night">Last Night</string>
    <string name="date">Date</string>
    <string name="dreams">Dreams</string>
    <string name="what_happened_in_my_dream">What happened in my Dream?</string>
    <string name="title">Title</string>
    <string name="add_next_dream">add next dream</string>
    <string name="color_title">Select your Color</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="progressbar_registering">Registering User...</string>
    <string name="signup_registering_failed">Registering User failed! Please try again</string>
    <string name="sign_out">Sign Out</string>
    <string name="signing_in">Signin In..</string>
</resources>
