<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/dream_timeline" />
        <item
            android:id="@+id/nav_dreamarchive"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/dream_archive" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
        <item
            android:id="@+id/nav_dreamsymbols"
            android:icon="@drawable/ic_cloud_black_24dp"
            android:title="@string/dream_symbols" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics_black_24px"
            android:title="@string/statistics" />
    </group>

    <item android:title="@string/misc">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />

        </menu>
    </item>

</menu>
