<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_signup"
    android:background="@color/colorGreen">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/ic_dream_factory"
    android:backgroundTint="@android:color/background_light">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                android:background="@color/login_view_background"
                android:id="@+id/textInputLayout3"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="24dp">

                <AutoCompleteTextView
                    android:id="@+id/edittext_signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textInputLayout"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/login_view_background"
                tools:layout_editor_absoluteY="115dp"
                app:layout_constraintLeft_toLeftOf="@+id/textInputLayout3">

                <EditText
                    android:id="@+id/edittext_signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_signup_register"
                style="?android:textAppearanceSmall"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_width="200dp"
                tools:background="@color/login_view_background"
                android:layout_marginTop="160dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:text="Already registered? Sign In here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_signup_signin"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_signup_register"
                android:textAlignment="center" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
