<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/content_dream_root_relative_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/date"
            android:id="@+id/tv_date_newdream"
            android:layout_marginTop="29dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="25dp"
            android:paddingRight="5dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/et_datePicker"
            android:editable="false"
            android:layout_alignBottom="@+id/tv_date_newdream"
            android:layout_toEndOf="@+id/tv_date_newdream"
            android:layout_marginLeft="5dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_color_picker"
            android:src="@drawable/ic_color_lens_black_40dp"
            android:background="#00ffffff"
            android:contentDescription="color_picker"
            android:layout_alignTop="@+id/bt_next_dream"
            android:layout_alignEnd="@+id/et_datePicker" />


    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/tv_date_newdream"
        android:layout_alignEnd="@+id/toggle_without_Date">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_dream_title"
                android:layout_above="@+id/et_dreamcontent"
                android:layout_alignParentStart="true" />
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_dreamcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_et_title"
        android:layout_alignParentStart="true">
        <android.support.design.widget.TextInputEditText
            android:hint="@string/what_happened_in_my_dream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_dreamcontent"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_next_dream"
        android:id="@+id/bt_next_dream"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/input_layout_tags"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/input_layout_dreamcontent"
        android:layout_alignParentStart="true">
    <com.android.ex.chips.RecipientEditTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ret_tags"
        android:hint="Enter Tags"/>
    </android.support.design.widget.TextInputLayout>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggle_without_Date"
        android:layout_alignTop="@+id/et_datePicker"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="5dp"
        android:checked="true" />

</RelativeLayout>