<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_signin"
    android:background="@color/colorGreen">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/ic_dream_factory">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_signin_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:background="@color/login_view_background"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textInputLayout2"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/edittext_signin_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:id="@+id/textInputLayout"
                android:background="@color/login_view_background"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintLeft_toLeftOf="@+id/textInputLayout2">

                <EditText
                    android:id="@+id/edittext_signin_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_signin_signin"
                style="?android:textAppearanceSmall"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textStyle="bold"
                android:layout_width="200dp"
                tools:background="@color/login_view_background"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout"
                android:layout_marginTop="208dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:text="Not registered? Sign Up here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_signin_register"
                android:textAlignment="center"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_signin_signin"
                app:layout_constraintLeft_toLeftOf="@+id/button_signin_signin" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
